# 2DSur

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake  main.pro
Documents/Assets/: Ground Tiles.piskel
headers/: MainWindow.h
headers/game/: Chunk.h  CoreGameObject.h  Enviroment.h  GameCore.h  Player.h
headers/utils/: AssetPath.h  Spritesheet.h
src/: MainWindow.cpp  main.cpp
src/game/: Chunk.cpp  CoreGameObject.cpp  Enviroment.cpp  GameCore.cpp  Player.cpp
src/utils/: Spritesheet.cpp
